Fix: header has covered contents; add logo link
- Add paddings to each l-screen so fixed header does not cover contents
  when jumping to an anchor inside page.
- Make main logo a link that points to the top of page.

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -73,7 +73,7 @@ h2,h3 {
 }
 h2 {
   font-size: 1.8em;
-  margin-top: 1.4em;
+  margin-top: 0;
   margin-bottom: 0.8em;
 }
 h3 {
